--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>TinDog</title>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu&display=swap"
+      rel="stylesheet">
 
     <link rel="stylesheet" href="css/styles.css">
     <!-- Bootstrap -->
@@ -34,7 +34,7 @@
 
     <section id="title">
 
-      <div class="container-fluid">
+      <div class="container">
 
         <!-- Nav Bar -->
 
@@ -46,7 +46,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
                 <a class="nav-link" href="">Contact</a>
@@ -61,7 +61,6 @@
           </div>
         </nav>
 
-
         <div class="row">
 
           <div class="col-lg-6">
@@ -75,6 +74,7 @@
           <div class="col-lg-6">
             <img class="title-image" src="images/iphone6.png" alt="iphone-mockup" />
           </div>
+
         </div>
       </div>
     </section>
