--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
+                <a class="nav-link" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Pricing</a>
+                <a class="nav-link" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Download</a>
+                <a class="nav-link" href="#cta">Download</a>
               </li>
             </ul>
           </div>
@@ -209,8 +209,11 @@
     <section id="cta">
 
       <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+
+      <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>
+        Download</button>
+      <button type="button" class="btn btn-outline-dark btn-lg download-button"><i class="fab fa-google-play"></i>
+        Download</button>
 
     </section>
 
@@ -218,6 +221,13 @@
     <!-- Footer -->
 
     <footer id="footer">
+
+
+      <i class="social_icon fab fa-twitter"></i>
+      <i class="social_icon fab fa-facebook-square"></i>
+      <i class="social_icon fab fa-instagram"></i>
+      <i class="social_icon fab fa-pinterest-square"></i>
+
 
       <p>© Copyright 2018 TinDog</p>
 
